# FireflyHelper

./: LoadData.py  README.md  pyproject.toml  requirements.txt
assets/: march7th.json
services/backend/src/: main.py  relic_processing.py
services/frontend/: README.md  jsconfig.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
services/frontend/src/: App.vue  columns.tsx  main.js
src/: fastapi_main.py  gui.ui  main.py  relic_processing.py  ui_gui.py
tests/: march7th.min.json
