[tool.poetry]
name = "fireflyhelper"
version = "0.1.0"
description = "Another yas backend"
authors = ["快乐的老鼠宝宝 <laoshubaby@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
PySide6 = "^6.6.1"
pyside6-addons = "6.6.1"
pyside6-essentials = "6.6.1"
shiboken6 = "6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
