[tool.poetry]
name = "fireflyhelper"
version = "0.1.0"
description = "Another yas backend"
authors = ["Peide Yang <74225450+MrSnake0208@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PySide6 = {version="^6.6.1", python="^3.8,<3.13"}
pyside6-addons = {version="^6.6.1", python="^3.8,<3.13"}
pyside6-essentials = {version="^6.6.1", python="^3.8,<3.13"}
shiboken6 = {version="^6.6.1", python="^3.8,<3.13"}
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true